--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,5 +69,97 @@
 
   <script src="script.js"></script>
   <script src="questions.js"></script>
+  <script>
+    let submittedQuestions = JSON.parse(localStorage.getItem('submittedQuestions')) || [];
+
+    function displaySubmittedQuestions() {
+      const list = document.getElementById('submitted-questions-list');
+      list.innerHTML = '';
+      submittedQuestions.forEach(({ question, category, approved }, index) => {
+        const li = document.createElement('li');
+        li.style.border = '1px solid #ccc';
+        li.style.padding = '10px';
+        li.style.marginBottom = '10px';
+        li.innerHTML = `<strong>Category:</strong> ${category}<br><strong>Question:</strong> ${question}`;
+        if (!approved) {
+          const delBtn = document.createElement('button');
+          delBtn.innerText = '🗑️ Delete';
+          delBtn.style.marginLeft = '10px';
+          delBtn.onclick = () => {
+            submittedQuestions.splice(index, 1);
+            localStorage.setItem('submittedQuestions', JSON.stringify(submittedQuestions));
+            displaySubmittedQuestions();
+          };
+          li.appendChild(delBtn);
+        }
+        list.appendChild(li);
+      });
+    }
+
+    function submitQuestionForm(e) {
+      e.preventDefault();
+      const question = document.getElementById('new-question').value.trim();
+      const category = document.getElementById('new-category').value;
+
+      if (!question || !category) {
+        alert('Please fill out both the question and category.');
+        return;
+      }
+
+      submittedQuestions.push({ question, category, approved: false });
+      localStorage.setItem('submittedQuestions', JSON.stringify(submittedQuestions));
+
+      alert('Thank you for submitting your question! It will be reviewed by the admin.');
+      document.getElementById('submit-question-form').reset();
+      displaySubmittedQuestions();
+    }
+
+    function downloadSubmissions() {
+      if (submittedQuestions.length === 0) {
+        alert('No questions submitted yet.');
+        return;
+      }
+
+      const blob = new Blob([JSON.stringify(submittedQuestions, null, 2)], {
+        type: 'application/json'
+      });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'submitted_questions.json';
+      a.click();
+      URL.revokeObjectURL(url);
+    }
+
+    function importApprovedQuestions() {
+      const input = document.createElement('input');
+      input.type = 'file';
+      input.accept = 'application/json';
+      input.onchange = e => {
+        const file = e.target.files[0];
+        const reader = new FileReader();
+        reader.onload = event => {
+          try {
+            const approved = JSON.parse(event.target.result);
+            approved.forEach(({ question, category }) => {
+              if (!questionBank[category]) questionBank[category] = [];
+              questionBank[category].push(question);
+              submittedQuestions.push({ question, category, approved: true });
+            });
+            localStorage.setItem('submittedQuestions', JSON.stringify(submittedQuestions));
+            alert('Approved questions have been added!');
+            displaySubmittedQuestions();
+          } catch (err) {
+            alert('Invalid JSON file.');
+          }
+        };
+        reader.readAsText(file);
+      };
+      input.click();
+    }
+
+    // Run on load
+    window.onload = () => displaySubmittedQuestions();
+  </script>
 </body>
 </html>
