--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,58 +9,30 @@
 <body>
   <header style="text-align:center; margin-bottom: 30px;">
     <img src="EDIcebreaker logo.jpg" alt="EDIcebreaker Logo" style="max-width: 300px; height: auto;">
+    <h1>EDIcebreaker</h1>
+    <p>Travel with EDI | Voyager avec l’EDI</p>
   </header>
 
-  <div class="panels">
-    <h2>New Session</h2>
-    <div id="question-panels" class="panel-container"></div>
-    <button onclick="addPanel()">Add Panel</button>
-    <button onclick="resetPanels()">Reset Panels</button>
-    <div style="text-align: center; margin-top: 20px;">
-      <button onclick="generateRandomPanels(2)">Generate 2 Random Panels</button>
-      <button onclick="generateRandomPanels(4)">Generate 4 Random Panels</button>
-      <button onclick="generateRandomPanels(6)">Generate 6 Random Panels</button>
-    </div>
-  </div>
-
-  <div class="categories" style="margin-top: 60px;">
-    <h2><strong>Multibank</strong></h2>
+  <div class="categories">
+    <h2>Question Bank</h2>
     <select id="category-select" onchange="loadCategory()">
-      <option value=""><strong>Select a category</strong></option>
-      <option value="individual" class="category-frame individual-frame">🟣 Individuel / Individual</option>
-      <option value="culture" class="category-frame culture-frame">🟡 Culture et tradition / Culture and tradition</option>
-      <option value="food" class="category-frame food-frame">🟢 Nourriture et nature / Food and nature</option>
-      <option value="society" class="category-frame society-frame">🔴 Société et loi / Society and law</option>
-      <option value="academic" class="category-frame academic-frame">🔵 Académique et économie / Academics and economy</option>
-      <option value="random" class="category-frame neutral-frame">⚪ Random categories</option>
-    </select>
-    <div id="question-list" class="question-list"></div>
-  </div>
-
-  <div id="review-submissions" style="margin: 40px auto; max-width: 600px;">
-    <h3>Review Submitted Questions</h3>
-    <ul id="submitted-questions-list" style="list-style-type: none; padding: 0;"></ul>
-  </div>
-
-  <form id="submit-question-form" onsubmit="submitQuestionForm(event)">
-    <h3>Submit a New Question</h3>
-    <label for="new-question">Question:</label>
-    <textarea id="new-question" rows="4" required></textarea>
-
-    <label for="new-category">Category:</label>
-    <select id="new-category" required>
-      <option value="">Select category</option>
+      <option value="">Select a category</option>
       <option value="individual">Individuel / Individual</option>
       <option value="culture">Culture et tradition / Culture and tradition</option>
       <option value="food">Nourriture et nature / Food and nature</option>
       <option value="society">Société et loi / Society and law</option>
       <option value="academic">Académique et économie / Academics and economy</option>
+      <option value="random">🎲 Random categories</option>
     </select>
+    <div id="question-list" class="question-list"></div>
+  </div>
 
-    <button type="submit">Submit for Approval</button>
-    <button type="button" onclick="downloadSubmissions()">Download All Submissions</button>
-    <button type="button" onclick="importApprovedQuestions()">Import Approved Questions</button>
-  </form>
+  <div class="panels">
+    <h2>Your Questions</h2>
+    <div id="question-panels" class="panel-container"></div>
+    <button onclick="addPanel()">Add Panel</button>
+    <button onclick="resetPanels()">Reset Panels</button>
+  </div>
 
   <footer style="text-align:center; margin-top: 40px; font-size: 0.9em; color: #777;">
     <p>This tool is licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
@@ -69,97 +40,5 @@
 
   <script src="script.js"></script>
   <script src="questions.js"></script>
-  <script>
-    let submittedQuestions = JSON.parse(localStorage.getItem('submittedQuestions')) || [];
-
-    function displaySubmittedQuestions() {
-      const list = document.getElementById('submitted-questions-list');
-      list.innerHTML = '';
-      submittedQuestions.forEach(({ question, category, approved }, index) => {
-        const li = document.createElement('li');
-        li.style.border = '1px solid #ccc';
-        li.style.padding = '10px';
-        li.style.marginBottom = '10px';
-        li.innerHTML = `<strong>Category:</strong> ${category}<br><strong>Question:</strong> ${question}`;
-        if (!approved) {
-          const delBtn = document.createElement('button');
-          delBtn.innerText = '🗑️ Delete';
-          delBtn.style.marginLeft = '10px';
-          delBtn.onclick = () => {
-            submittedQuestions.splice(index, 1);
-            localStorage.setItem('submittedQuestions', JSON.stringify(submittedQuestions));
-            displaySubmittedQuestions();
-          };
-          li.appendChild(delBtn);
-        }
-        list.appendChild(li);
-      });
-    }
-
-    function submitQuestionForm(e) {
-      e.preventDefault();
-      const question = document.getElementById('new-question').value.trim();
-      const category = document.getElementById('new-category').value;
-
-      if (!question || !category) {
-        alert('Please fill out both the question and category.');
-        return;
-      }
-
-      submittedQuestions.push({ question, category, approved: false });
-      localStorage.setItem('submittedQuestions', JSON.stringify(submittedQuestions));
-
-      alert('Thank you for submitting your question! It will be reviewed by the admin.');
-      document.getElementById('submit-question-form').reset();
-      displaySubmittedQuestions();
-    }
-
-    function downloadSubmissions() {
-      if (submittedQuestions.length === 0) {
-        alert('No questions submitted yet.');
-        return;
-      }
-
-      const blob = new Blob([JSON.stringify(submittedQuestions, null, 2)], {
-        type: 'application/json'
-      });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = 'submitted_questions.json';
-      a.click();
-      URL.revokeObjectURL(url);
-    }
-
-    function importApprovedQuestions() {
-      const input = document.createElement('input');
-      input.type = 'file';
-      input.accept = 'application/json';
-      input.onchange = e => {
-        const file = e.target.files[0];
-        const reader = new FileReader();
-        reader.onload = event => {
-          try {
-            const approved = JSON.parse(event.target.result);
-            approved.forEach(({ question, category }) => {
-              if (!questionBank[category]) questionBank[category] = [];
-              questionBank[category].push(question);
-              submittedQuestions.push({ question, category, approved: true });
-            });
-            localStorage.setItem('submittedQuestions', JSON.stringify(submittedQuestions));
-            alert('Approved questions have been added!');
-            displaySubmittedQuestions();
-          } catch (err) {
-            alert('Invalid JSON file.');
-          }
-        };
-        reader.readAsText(file);
-      };
-      input.click();
-    }
-
-    // Run on load
-    window.onload = () => displaySubmittedQuestions();
-  </script>
 </body>
 </html>
