--- a/index.html
+++ b/index.html
@@ -1,58 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EDIcebreaker Tool</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background-color: white;
-      font-family: Arial, sans-serif;
-    }
-    .panel {
-      border: 1px solid #ccc;
-      min-height: 100px;
-      margin: 10px;
-      padding: 10px;
-      background-color: #f0f0f0;
-      text-align: center;
-    }
-    .question {
-      border: 1px solid #ccc;
-      padding: 8px;
-      margin: 5px;
-      cursor: grab;
-      font-style: italic;
-    }
-    .highlighted {
-      background-color: #e6f7ff;
-    }
-    #submit-question-form {
-      display: none;
-      border: 1px solid #ccc;
-      padding: 20px;
-      margin-top: 20px;
-      background-color: #f9f9f9;
-    }
-  </style>
 </head>
 <body>
-  <header style="text-align:center;">
-    <img src="EDIcebreaker logo.jpg" alt="EDIcebreaker Logo" style="max-width: 300px; height: auto;">
+  <header>
+    <img src="EDIcebreaker logo.jpg" alt="EDIcebreaker Logo">
   </header>
 
-  <section class="panels" style="margin-top: 30px;">
-    <h2 style="text-align:center;">New Session</h2>
-    <div id="question-panels" class="panel-container" style="display:flex; flex-wrap:wrap; justify-content:center;"></div>
-    <div style="text-align:center; margin-top:10px;">
+  <section class="panels">
+    <h2>Your Questions</h2>
+    <div id="question-panels" class="panel-container"></div>
+    <div class="button-container">
       <button onclick="addPanel()">Add Panel</button>
       <button onclick="resetPanels()">Reset Panels</button>
     </div>
   </section>
 
-  <section class="categories" style="margin-top: 40px;">
+  <section class="categories">
     <h2><strong>Multibank</strong></h2>
     <select id="category-select" onchange="loadCategory()">
       <option value="">Select a category</option>
@@ -66,12 +34,12 @@
     <div id="question-list" class="question-list"></div>
   </section>
 
-  <section style="text-align:center; margin: 40px;">
+  <section class="submit-section">
     <button onclick="toggleSubmitForm()">Submit a Question</button>
     <div id="submit-question-form">
       <h3>Submit a New Question</h3>
       <label for="new-question">Your Question:</label><br>
-      <textarea id="new-question" rows="4" style="width:100%;" required></textarea><br><br>
+      <textarea id="new-question" rows="4" required></textarea><br><br>
       <label for="new-category">Category:</label>
       <select id="new-category" required>
         <option value="">Select category</option>
